--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,21 +1,33 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-menu-button color="light"></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
+    <ion-title>Home</ion-title>
+    <ion-button color="light" fill="clear" slot="end" (click)="presentAlert()">
+      <ion-icon slot="icon-only" name="wallet"></ion-icon>
+    </ion-button>
   </ion-toolbar>
+  <!-- <ion-searchbar placeholder="Search Location" inputmode="decimal" type="decimal" (ionChange)="onSearchChange($event)" [debounce]="250" showCancelButton="always"></ion-searchbar> -->
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
+ 
+  <ion-button (click)="openPrebook()" expand="full">
+    Pre-Book
+  </ion-button>
+  <capacitor-google-map id="map"></capacitor-google-map>
 
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+
+  <div style="position:absolute; height: auto; width: 300px; border: 2px solid black; top: 65%; left: 10px;">
+   <p *ngFor="let item of slots" [ngStyle]="{color: item.color}" > <span style="height:50px; width: 50px; background:black ;"> I </span> {{item.name}} </p>
   </div>
+
+
+   
+<ion-fab vertical="top" horizontal="end" slot="fixed">
+  <ion-fab-button (click)="openStartChargingPage()">
+    <ion-icon name="qr-code"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 </ion-content>
