--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -1,6 +1,11 @@
 ion-menu-button {
   color: var(--ion-color-primary);
 }
+capacitor-google-map {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
 
 #container {
   text-align: center;
