--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,24 +1,27 @@
 
-<ion-content>
+<!-- <ion-content [fullscreen]="true" class="ion-margin-top" color="dark">
   
   <ion-grid>
     <ion-row>
-      <ion-col size="8" offset="4">
-      <img style="margin-top:80px; height:150px; width: 150px; display:flex; justify-content:center; align-items: center;" src="assets/serviceiot.png" alt="" srcset="">
-      <ion-input [(ngModel)]="email" type="email" placeholder="Email"></ion-input>
-      <ion-input [(ngModel)]="password" type="password" placeholder="Password"></ion-input>
+      <ion-col size="8" offset="2">
+      <img style="margin-top:40px; height:150px; width: 150px; display:flex; justify-content:center; align-items: center;" src="assets/serviceiot.png" alt="" srcset="">
+<div>
+  <img src="../../assets/Group 7.svg" style="height:100px; width:120px ;">
+</div>
+      <div>
+      <ion-input [(ngModel)]="email" type="email" placeholder="Email" style="border :1px solid #1EC283; border-radius: 8px; "></ion-input>
+      <ion-input [(ngModel)]="password" type="password" placeholder="Password"style="border :1px solid #1EC283; border-radius: 8px; margin-top:10px"></ion-input>
       <ion-button (click)="userLogin()" expand="block" fill="clear" shape="round">
         login
       </ion-button>
+    </div>
       <ion-label [routerLink]="['/register']" routerLinkActive="router-link-active" >Not a User?</ion-label>
     </ion-col>
     <ion-col size="6"></ion-col>
   </ion-row>
  </ion-grid>
 
-  
-</ion-content>
-<ion-footer>
+ <div>
   <ion-toolbar lines="none">
     <div class="block-wrap">
     <div (click)="googleLogin()">
@@ -34,7 +37,7 @@
       </a>
     </div>
   
-    <!-- facebook	 -->
+    facebook	
     <div (click)="facebookLogin()">
       <a class="btn-fb" href="">
         <div class="fb-content">
@@ -49,6 +52,121 @@
       </a>
     </div>
 
+
   </div>
+  </ion-toolbar>
+ </div>
+
+ <div class="flex-container">
+  <div>   
+     <div (click)="googleLogin()">
+    <a class="btn-google" href="">
+      <div class="google-content">
+        <div class="logo">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 48 48">
+          <defs><path id="a" d="M44.5 20H24v8.5h11.8C34.7 33.9 30.1 37 24 37c-7.2 0-13-5.8-13-13s5.8-13 13-13c3.1 0 5.9 1.1 8.1 2.9l6.4-6.4C34.6 4.1 29.6 2 24 2 11.8 2 2 11.8 2 24s9.8 22 22 22c11 0 21-8 21-22 0-1.3-.2-2.7-.5-4z"/></defs><clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath><path clip-path="url(#b)" fill="#FBBC05" d="M0 37V11l17 13z"/><path clip-path="url(#b)" fill="#EA4335" d="M0 11l17 13 7-6.1L48 14V0H0z"/><path clip-path="url(#b)" fill="#34A853" d="M0 37l30-23 7.9 1L48 0v48H0z"/><path clip-path="url(#b)" fill="#4285F4" d="M48 48L17 24l-4-3 35-10z"/>
+        </svg>
+        </div>
+        <p>Sign in with Google</p>
+      </div>
+    </a>
+  </div>
+</div>
+  <div>
+    <div (click)="facebookLogin()">
+    <a class="btn-fb" href="">
+      <div class="fb-content">
+        <div class="logo">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" version="1">
+        <path fill="#FFFFFF" d="M32 30a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h28a2 2 0 0 1 2 2v28z"/>
+        <path fill="#4267b2" d="M22 32V20h4l1-5h-5v-2c0-2 1.002-3 3-3h2V5h-4c-3.675 0-6 2.881-6 7v3h-4v5h4v12h5z"/>
+      </svg>
+        </div>
+        <p>Sign in with Facebook</p>
+      </div>
+    </a>
+  </div></div>
+
+</div>
+
+</ion-content> -->
+
+<ion-content  [fullscreen]="true" class="ion-margin-top back" color="dark">
+
+  <div class="img-wrapper ion-margin-top" >
+    <div class="img ">
+      <img style="margin-top:10px; display:flex; justify-content:center; align-items: center;" src="assets/serviceiot.png" alt="" srcset="">
+    </div>
+
+  </div>
+  <div class="img-wrapper" >
+    <div class="img text_img">
+      <img src="../../assets/Group 7.svg" >
+    </div>
+
+  </div>
+
+
+
+
+
+
+<div class="Input ion-margin-top">
+<!-- Input with placeholder -->
+<ion-input placeholder="Email"></ion-input>
+
+
+
+</div>
+<div class="Input" >
+<!-- Input with placeholder -->
+<ion-input placeholder="password"></ion-input>
+
+
+
+</div>
+<div class="Nat">
+  <a color="light"[routerLink]="['/register']" routerLinkActive="router-link-active">New User? Click here.</a>
+</div>
+
+<div class="flex-container ion-margin-top">
+  <div>  
+       <div (click)="googleLogin()">
+    <a class="btn-google" href="">
+      <div class="google-content">
+        <div class="logo">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 48 48">
+          <defs><path id="a" d="M44.5 20H24v8.5h11.8C34.7 33.9 30.1 37 24 37c-7.2 0-13-5.8-13-13s5.8-13 13-13c3.1 0 5.9 1.1 8.1 2.9l6.4-6.4C34.6 4.1 29.6 2 24 2 11.8 2 2 11.8 2 24s9.8 22 22 22c11 0 21-8 21-22 0-1.3-.2-2.7-.5-4z"/></defs><clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath><path clip-path="url(#b)" fill="#FBBC05" d="M0 37V11l17 13z"/><path clip-path="url(#b)" fill="#EA4335" d="M0 11l17 13 7-6.1L48 14V0H0z"/><path clip-path="url(#b)" fill="#34A853" d="M0 37l30-23 7.9 1L48 0v48H0z"/><path clip-path="url(#b)" fill="#4285F4" d="M48 48L17 24l-4-3 35-10z"/>
+        </svg>
+        </div>
+        <p>Google</p>
+      </div>
+    </a>
+  </div>
+</div>
+  <div class="ion-margin-top">
+    <div (click)="facebookLogin()">
+      <a class="btn-fb" href="">
+        <div class="fb-content">
+          <div class="logo">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" version="1">
+          <path fill="#FFFFFF" d="M32 30a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h28a2 2 0 0 1 2 2v28z"/>
+          <path fill="#4267b2" d="M22 32V20h4l1-5h-5v-2c0-2 1.002-3 3-3h2V5h-4c-3.675 0-6 2.881-6 7v3h-4v5h4v12h5z"/>
+        </svg>
+          </div>
+          <p> Facebook</p>
+        </div>
+      </a>
+    </div>
+  </div>
+ 
+</div>
+</ion-content>
+
+<ion-button (click)="uLogin()">dg</ion-button>
+<ion-footer >
+  <ion-toolbar color="success">
+    <ion-title class="ion-text-center"color="light"(click)="userLogin()" expand="block" fill="clear" shape="round" >Login</ion-title>
+  
   </ion-toolbar>
 </ion-footer>
