--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -56,17 +56,33 @@ ion-content{
 
 // }
 
-.block-wrap {
+
+.flex-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  height: 20%;
+  flex-wrap: nowrap;
+  // background-color: DodgerBlue;
 }
-.block-wrap > div {
-  width: 100%;
-  text-align: center;
-}
+
+// .flex-container > div {
+//   // background-color: #f1f1f1;
+//   // width: 100px;
+//   // margin: 10px;
+//   text-align: center;
+//   line-height: 75px;
+//   font-size: 30px;
+// }
+
+// .block-wrap {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   flex-wrap: wrap;
+//   height: 20%;
+// }
+// .block-wrap > div {
+//   width: 100%;
+//   text-align: center;
+// }
 
 .btn-google, .btn-fb {
   display: inline-block;
@@ -78,16 +94,17 @@ ion-content{
 .btn-google .google-content, .btn-google .fb-content, .btn-fb .google-content, .btn-fb .fb-content {
   display: flex;
   align-items: center;
-  width: 300px;
-  height: 50px;
+  width: 100px;
+  // height: 50px;
 }
-.btn-google .google-content .logo, .btn-google .fb-content .logo, .btn-fb .google-content .logo, .btn-fb .fb-content .logo {
-  padding: 15px;
-  height: inherit;
-}
+// .btn-google .google-content .logo, .btn-google .fb-content .logo, .btn-fb .google-content .logo, .btn-fb .fb-content .logo {
+//   padding: 15px;
+//   height: inherit;
+// }
 .btn-google .google-content svg, .btn-google .fb-content svg, .btn-fb .google-content svg, .btn-fb .fb-content svg {
-  width: 18px;
-  height: 18px;
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
 }
 .btn-google .google-content p, .btn-google .fb-content p, .btn-fb .google-content p, .btn-fb .fb-content p {
   width: 100%;
@@ -100,6 +117,7 @@ ion-content{
 
 .btn-google {
   background: #FFF;
+  border-radius: 7px;
 }
 .btn-google:hover {
   box-shadow: 0 0 3px 3px rgba(66, 133, 244, 0.3);
@@ -109,10 +127,13 @@ ion-content{
 }
 .btn-google .google-content p {
   color: #757575;
+  font-size: 15px;
+  
 }
 
 .btn-fb {
-  padding-top: 1.5px;
+  // padding-top: 1.5px;
+  border-radius: 7px;
   background: #4267b2;
   background-color: #3b5998;
 }
@@ -120,5 +141,65 @@ ion-content{
   box-shadow: 0 0 3px 3px rgba(59, 89, 152, 0.3);
 }
 .btn-fb .fb-content p {
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(248, 247, 247, 0.87);
+  font-size: 15px;
+}
+
+
+.Input{
+  border: 1px solid #1EC283;
+  border-radius: 7px;
+  margin-top: 6%;
+  padding: 1%;
+  margin: 5%;
+}
+.Nat{
+  text-align: center;
+  margin-top: 3%;
+  color: #ffff;
+}
+.Nat a{
+  
+  color: #ffff;
+}
+// .footer{
+//     background-color: #FBAD36;
+//     color: #ffffff;
+// }
+
+.back{
+  background-color: #000 !important;
+}
+.img-wrapper{
+  justify-content: center;
+  display: flex;
+
+}
+.img{
+  width: 100px;
+  height: auto;
+  margin-top: 10%;
+}
+.text_img{
+  // margin-top: -26px;
+  width: 150px;
+  margin-bottom: 1%;
+
+}
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  // background-color: DodgerBlue;
+}
+
+.flex-container > div {
+  // background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  // line-height: 75px;
+  font-size: 30px;
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
