--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -12,9 +12,28 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6" offset="3">
-        <img src="" alt="" srcset="">
+        <img src="../../assets/Unsplash-Avatars_0004s_0005_laurence-cruz-P7yvmajPvkM-unsplash.svg" alt="" srcset="">
       </ion-col>
-      <ion-col size="6"></ion-col>
+      <ion-col size=""  class="ion-margin-top">
+  
+<!-- Inputs with labels -->
+<ion-item >
+  <ion-label class="email">Email</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+
+
+
+<ion-item>
+  <ion-label position="fixed" class="email">Password</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+
+<ion-item>
+  <ion-label position="fixed"class="email">Mobile No</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
